Move prefetching control to viewDidLoad

Setting prefetchingEnabled in the init loads the view, as the property
is set on the view. If the view is loaded during the init, the
overscrollDelegate is not set yet, and the overscroll actions are not
triggered.
Moving it to viewDidLoad prevents loading the view before everything
is set.

Bug: 748135
Change-Id: Ia19555d7d8d0c8d0c2890ca69e7e03854ac4504b
Reviewed-on: https://chromium-review.googlesource.com/584289
Reviewed-by: Elodie Banel <lod@chromium.org>
Commit-Queue: Gauthier Ambard <gambard@chromium.org>
Cr-Commit-Position: refs/heads/master@{#489279}
Former-commit-id: 8f253d737b7d9e9638471b94a1f8cc2048eed96e